# throughput_benchmark_python

./: .env  .gitignore  README.md  app.py  app.spec  app_benchmark.py  app_benchmark.spec  app_gui.py  app_gui.spec  app_throughput.py  app_throughput.spec  benchmark_mongo.py  benchmark_mongo_app.py  benchmark_server.py  benchmark_server_app.py  pyproject.toml  teste_conexao_mongodb.py  teste_conexao_server.py  throughput_mongo.py  throughput_server.py
