[tool.poetry]
name = "throughput-benchmark-python"
version = "0.1.0"
description = ""
authors = ["Vinicius"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"  # Aqui você especifica a versão do Python suportada

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
